--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
     "AllowedHosts": "*",
 
     "OpenAI": {
-        "ApiKey": "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"
+        "ApiKey": ""
     }
 }
